syntax = "proto3";  // proto2 -> proto3·Î º¯°æ

package msgTest;

message Vector {  
    float x = 1;  
    float y = 2;  
    float z = 3;  
}

message MoveState{
    string playerName = 1;
    Vector position = 2; 
    Vector velocity = 3; 
    int64 timestamp = 4; 
}

message Player{
    string name = 1;
    int32 level = 2;
    Vector position = 3;
}

message Room{
    int32 roomId = 1;
    string roomName = 2;  
    int32 maxPlayerCount = 3;
    int32 playerCount = 4;
    string hostPlayerName = 5;
}

message CS_Login_Request{
    string id = 1;
    string password = 2;
}
message SC_Login_Response{
    bool success = 1;
    string errorMessage = 2;
    uint64 sessionId = 3;
}

message CS_My_Player_Info_Request{
    uint64 sessionId = 1;
}
message SC_My_Player_Info_Response{
    Player playerInfo = 1;
}

message CS_Room_Player_List_Request{
    int32 roomId = 1;
}
message SC_Room_Player_List_Response{
    repeated Player playerList = 1;
}

message CS_Create_Room_Request{
    string roomName = 1;
    string hostName = 2;
}
message SC_Create_Room_Response{
    bool success = 1;
    string errorMessage = 2;
    Room room = 3;
}

message CS_Room_List_Request{

}
message SC_Room_List_Response{
    repeated Room roomList = 1;
}

message CS_Enter_Room_Request{
    int32 roomId = 1;
}
message SC_Enter_Room_Response{
    bool success = 1;
    string errorMessage = 2;
    Room room = 3;
}

message SC_Player_Enter_Room_Notification{
    Player player = 1;
}

message CS_Player_Move_Request{
    MoveState moveState = 1;
}

message SC_Player_Move_Notification{
    repeated MoveState moveStates = 1;
}